services.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - port: 4180
      targetPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
