ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: foo.bar.com
    http:
      paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
        - path: /oauth2
          pathType: Prefix
          backend:
            service:
              name: oauth-proxy
              port:
                number: 4180
